--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
       datasource:
         master:
           driver-class-name: com.p6spy.engine.spy.P6SpyDriver
-          url: jdbc:p6spy:mysql://localhost:3306/test?characterEncoding=utf8&useSSL=false&serverTimezone=GMT
+          url: jdbc:p6spy:mysql://localhost:3306/test?characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
           username: root
           password: root
         #          url: jdbc:mysql://localhost:3306/ datasourceName?characterEncoding=utf8&useSSL=false&serverTimezone=GMT
@@ -19,7 +19,7 @@ spring:
 
         db1:
           driver-class-name: com.p6spy.engine.spy.P6SpyDriver
-          url: jdbc:p6spy:mysql://39.101.196.48:3307/transfer?characterEncoding=utf8&useSSL=false&serverTimezone=GMT
+          url: jdbc:p6spy:mysql://39.101.196.48:3307/transfer?characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
           username: root
           password: root
 #          url: jdbc:sqlserver://localhost:1433;DatabaseName= datasourceName
